Создано с помощью Colaboratory

--- a/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
+++ b/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAKlIeiWKgU4ZmrTwoA35D",
+      "authorship_tag": "ABX9TyM7GuYIaOkxo+e+tAV+gXhU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1937,11 +1937,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ситуация следующая. За 4 минуты было обработано 98 вариантов модели, и была выбрана оптимадбная с хорошим на мой взгляд результатом. В принципе, теперь можно, найдя локальный оптимум, можно погонять оптимизатор в квадрате 15-25 для глубины, и 45-55 для оценивания с шагом 1.\n",
+        "Ситуация следующая. За 4 минуты было обработано 98 вариантов модели, и была выбрана оптимальная, с хорошим на мой взгляд, результатом. В принципе, найдя локальный оптимум, можно погонять оптимизатор в квадрате 15-25 для глубины, и 45-55 для оценивания с шагом 1. Видимо идеал находится где-то там.\n",
         "\n",
         "Если использовать библиотеку optun, то с ней все очень неоднозначно. \n",
         "\n",
-        "Во-первых, совершенно непонятно в каких границах искать. Для RandomForestClassifier она фиксирует один параметр и подбират, скажем, глубину. \n",
+        "Во-первых, совершенно непонятно в каких границах искать. Для RandomForestClassifier она фиксирует один параметр и подбират, скажем, глубину. При том, что как задать начальные параметры вообще непонятно. \n",
+        "\n",
+        "Если, например задать область поиска так, как это у вас в примере, то я точно промахнусь с оптимальными гиперпараметрами.\n",
+        "\n",
         "\n",
         "Во-вторых, она это делает невероятно медленно. \n",
         "\n",
