Создано с помощью Colaboratory

--- a/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
+++ b/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7GuYIaOkxo+e+tAV+gXhU",
+      "authorship_tag": "ABX9TyML1iZpJxvPDi+vfVGqdjWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2305,11 +2305,11 @@
       "cell_type": "markdown",
       "source": [
         "## Выводы.\n",
-        "Во-первых я получил море удовольствия от изучения всей этой кухни с обучением моделей. Хотя с pandas сначала были проблемы. \n",
+        "Во-первых, я получил море удовольствия от изучения всей этой кухни с обучением моделей. Хотя с pandas сначала были проблемы. \n",
         "\n",
-        "Во-вторых метод случайного леса позволяет строить модели лучше, чем при использовании метода логистической регрессии.\n",
+        "Во-вторых, метод случайного леса позволяет строить модели лучше, чем при использовании метода логистической регрессии.\n",
         "\n",
-        "В-третьих я понял, что CoLab это очень удобный итструмент. Например, запоинить сайт, который пригодился, можно прямо в ячейке, причем ссылкой с удобочитаемой подписью!"
+        "В-третьих, я понял, что CoLab это очень удобный итструмент. Например, запомнить сайт, который пригодился, можно прямо в ячейке, причем ссылкой с удобочитаемой подписью!"
       ],
       "metadata": {
         "id": "7r12uAEAA62I"
