--- a/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
+++ b/Notebooks/Hotels_Bookingt_Exercise_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyML1iZpJxvPDi+vfVGqdjWj",
+      "authorship_tag": "ABX9TyOtPULWGdT7hil1djOnfZDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1320,7 +1320,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Попробуем разобраться с ценой комнаты. Это изначально едиственная существенная количественная характеристика. Причем ее значения существенно превышают значения остальных переменных, что предполагает нормализацию этой переменной.\n",
+        "Попробуем разобраться с ценой комнаты. Это, изначально, едиственная существенная количественная характеристика. Причем ее значения сильно превышают значения остальных переменных, что предполагает нормализацию этой переменной.\n",
         "Но это имеет смысл делать после разделения данных на тренировочный и тестовый наборы."
       ],
       "metadata": {
@@ -1937,13 +1937,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ситуация следующая. За 4 минуты было обработано 98 вариантов модели, и была выбрана оптимальная, с хорошим на мой взгляд, результатом. В принципе, найдя локальный оптимум, можно погонять оптимизатор в квадрате 15-25 для глубины, и 45-55 для оценивания с шагом 1. Видимо идеал находится где-то там.\n",
+        "Ситуация следующая. За 4 минуты было обработано 98 вариантов модели, и была выбрана оптимальная, с хорошим на мой взгляд, результатом. В принципе, найдя локальный оптимум, можно погонять оптимизатор в квадрате 15-25 для глубины, и 45-60 для оценивания с шагом 1. Видимо идеал находится где-то там.\n",
         "\n",
-        "Если использовать библиотеку optun, то с ней все очень неоднозначно. \n",
+        "Если использовать библиотеку optuna, то с ней все очень неоднозначно. \n",
         "\n",
-        "Во-первых, совершенно непонятно в каких границах искать. Для RandomForestClassifier она фиксирует один параметр и подбират, скажем, глубину. При том, что как задать начальные параметры вообще непонятно. \n",
+        "Во-первых, совершенно непонятно в каких границах искать оптимальные значения. Для RandomForestClassifier она фиксирует один параметр и подбирает, скажем, глубину. При том, что как задать начальные параметры границ оптимизации совсем непонятно. \n",
         "\n",
-        "Если, например задать область поиска так, как это у вас в примере, то я точно промахнусь с оптимальными гиперпараметрами.\n",
+        "Если, например, задать область поиска так, как это у вас в примере, то я точно промахнусь с оптимальными гиперпараметрами.\n",
         "\n",
         "\n",
         "Во-вторых, она это делает невероятно медленно. \n",
@@ -2186,6 +2186,168 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Попробуем найти совсем идеал\n",
+        "%%time\n",
+        "model = RandomForestClassifier()\n",
+        "\n",
+        "hyperparams = {\n",
+        "    'n_estimators': [52,53,54,55,56,57,58,59],\n",
+        "    'max_depth': [17, 18, 19, 20, 21, 22, 23]\n",
+        "}\n",
+        "\n",
+        "cross_val = GridSearchCV(model, hyperparams, cv=5)\n",
+        "cross_val.fit(X_train, y_train.values.ravel())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rEOBdbMI7N-6",
+        "outputId": "0a778ad9-c3e8-49e8-d1fa-763abe590899"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 4min 14s, sys: 675 ms, total: 4min 14s\n",
+            "Wall time: 4min 16s\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
+              "             param_grid={'max_depth': [17, 18, 19, 20, 21, 22, 23],\n",
+              "                         'n_estimators': [52, 53, 54, 55, 56, 57, 58, 59]})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results(cross_val)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d6s-aanC9Ila",
+        "outputId": "08832cc4-ace8-4f48-908b-6e2e9d962bcb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Оптимальные гиперпараметры: {'max_depth': 20, 'n_estimators': 54}\n",
+            "\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 17, 'n_estimators': 52}\n",
+            "Mean 0.881 Standard Deviation 0.006 Hyperparameters {'max_depth': 17, 'n_estimators': 53}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 17, 'n_estimators': 54}\n",
+            "Mean 0.88 Standard Deviation 0.004 Hyperparameters {'max_depth': 17, 'n_estimators': 55}\n",
+            "Mean 0.88 Standard Deviation 0.006 Hyperparameters {'max_depth': 17, 'n_estimators': 56}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 17, 'n_estimators': 57}\n",
+            "Mean 0.88 Standard Deviation 0.004 Hyperparameters {'max_depth': 17, 'n_estimators': 58}\n",
+            "Mean 0.88 Standard Deviation 0.005 Hyperparameters {'max_depth': 17, 'n_estimators': 59}\n",
+            "Mean 0.882 Standard Deviation 0.006 Hyperparameters {'max_depth': 18, 'n_estimators': 52}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 18, 'n_estimators': 53}\n",
+            "Mean 0.881 Standard Deviation 0.006 Hyperparameters {'max_depth': 18, 'n_estimators': 54}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 18, 'n_estimators': 55}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 18, 'n_estimators': 56}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 18, 'n_estimators': 57}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 18, 'n_estimators': 58}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 18, 'n_estimators': 59}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 19, 'n_estimators': 52}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 19, 'n_estimators': 53}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 19, 'n_estimators': 54}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 19, 'n_estimators': 55}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 19, 'n_estimators': 56}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 19, 'n_estimators': 57}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 19, 'n_estimators': 58}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 19, 'n_estimators': 59}\n",
+            "Mean 0.881 Standard Deviation 0.003 Hyperparameters {'max_depth': 20, 'n_estimators': 52}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 20, 'n_estimators': 53}\n",
+            "Mean 0.883 Standard Deviation 0.004 Hyperparameters {'max_depth': 20, 'n_estimators': 54}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 20, 'n_estimators': 55}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 20, 'n_estimators': 56}\n",
+            "Mean 0.883 Standard Deviation 0.004 Hyperparameters {'max_depth': 20, 'n_estimators': 57}\n",
+            "Mean 0.881 Standard Deviation 0.006 Hyperparameters {'max_depth': 20, 'n_estimators': 58}\n",
+            "Mean 0.882 Standard Deviation 0.003 Hyperparameters {'max_depth': 20, 'n_estimators': 59}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 21, 'n_estimators': 52}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 21, 'n_estimators': 53}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 21, 'n_estimators': 54}\n",
+            "Mean 0.883 Standard Deviation 0.005 Hyperparameters {'max_depth': 21, 'n_estimators': 55}\n",
+            "Mean 0.882 Standard Deviation 0.006 Hyperparameters {'max_depth': 21, 'n_estimators': 56}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 21, 'n_estimators': 57}\n",
+            "Mean 0.882 Standard Deviation 0.003 Hyperparameters {'max_depth': 21, 'n_estimators': 58}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 21, 'n_estimators': 59}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 22, 'n_estimators': 52}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 22, 'n_estimators': 53}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 22, 'n_estimators': 54}\n",
+            "Mean 0.883 Standard Deviation 0.005 Hyperparameters {'max_depth': 22, 'n_estimators': 55}\n",
+            "Mean 0.882 Standard Deviation 0.005 Hyperparameters {'max_depth': 22, 'n_estimators': 56}\n",
+            "Mean 0.882 Standard Deviation 0.004 Hyperparameters {'max_depth': 22, 'n_estimators': 57}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 22, 'n_estimators': 58}\n",
+            "Mean 0.883 Standard Deviation 0.005 Hyperparameters {'max_depth': 22, 'n_estimators': 59}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 23, 'n_estimators': 52}\n",
+            "Mean 0.881 Standard Deviation 0.006 Hyperparameters {'max_depth': 23, 'n_estimators': 53}\n",
+            "Mean 0.882 Standard Deviation 0.003 Hyperparameters {'max_depth': 23, 'n_estimators': 54}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 23, 'n_estimators': 55}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 23, 'n_estimators': 56}\n",
+            "Mean 0.881 Standard Deviation 0.004 Hyperparameters {'max_depth': 23, 'n_estimators': 57}\n",
+            "Mean 0.881 Standard Deviation 0.005 Hyperparameters {'max_depth': 23, 'n_estimators': 58}\n",
+            "Mean 0.881 Standard Deviation 0.003 Hyperparameters {'max_depth': 23, 'n_estimators': 59}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "model_top = RandomForestClassifier(n_estimators = 54, max_depth = 20)\n",
+        "model_top.fit(X_train, y_train.values.ravel())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kDCcTIlx9bXC",
+        "outputId": "ebb64950-dac6-4edf-8c85-38195e892b47"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1.11 s, sys: 5.89 ms, total: 1.12 s\n",
+            "Wall time: 1.17 s\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(max_depth=20, n_estimators=54)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Оценим модели. \n",
@@ -2198,7 +2360,7 @@
     {
       "cell_type": "code",
       "source": [
-        "for mdl in [model_easy, model_opt]: # в принципе можно сравнивать и больше двух моделей\n",
+        "for mdl in [model_easy, model_opt, model_top]: # в принципе можно сравнивать и больше двух моделей\n",
         "  y_pred = mdl.predict(X_val)\n",
         "  accuracy = round(accuracy_score(y_val, y_pred), 3)\n",
         "  precision = round(precision_score(y_val, y_pred), 3)\n",
@@ -2215,7 +2377,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qTpqyg_NDOcu",
-        "outputId": "065ca141-6cd3-4e59-ede5-f45a6948fb96"
+        "outputId": "d9e48ae5-3f84-4a06-d9e9-7b267fc58810"
       },
       "execution_count": null,
       "outputs": [
@@ -2223,8 +2385,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Max Depth: 8 || Estimators: 25 || Accuracy: 0.84 || Precision: 0.836 || Recall: 0.945\n",
-            "Max Depth: 20 || Estimators: 55 || Accuracy: 0.881 || Precision: 0.891 || Recall: 0.935\n"
+            "Max Depth: 8 || Estimators: 25 || Accuracy: 0.84 || Precision: 0.838 || Recall: 0.942\n",
+            "Max Depth: 20 || Estimators: 55 || Accuracy: 0.881 || Precision: 0.891 || Recall: 0.935\n",
+            "Max Depth: 20 || Estimators: 54 || Accuracy: 0.881 || Precision: 0.891 || Recall: 0.936\n"
           ]
         }
       ]
@@ -2241,8 +2404,8 @@
     {
       "cell_type": "code",
       "source": [
-        "y_pred = model_opt.predict(X_test)\n",
-        "accuracy = round(accuracy_score(y_test, y_pred), 3)\n",
+        "y_pred = model_top.predict(X_test)\n",
+        "accuracy = round(accuracy_score(y_test, y_pred), 6)\n",
         "precision = round(precision_score(y_test, y_pred), 3)\n",
         "recall = round(recall_score(y_test, y_pred), 3)\n",
         "\n",
@@ -2258,7 +2421,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhz30f6D_Wb3",
-        "outputId": "561d6f6a-7f2a-4cf4-dda6-c0d164c5bcaf"
+        "outputId": "7454bc6a-4427-4767-ba36-cedab1f320b1"
       },
       "execution_count": null,
       "outputs": [
@@ -2266,7 +2429,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Max Depth: 20 || Estimators: 55 || Accuracy: 0.878 || Precision: 0.892 || Recall: 0.933\n"
+            "Max Depth: 20 || Estimators: 55 || Accuracy: 0.880083 || Precision: 0.893 || Recall: 0.934\n"
           ]
         }
       ]
@@ -2286,7 +2449,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_0bLNc9Aoxb",
-        "outputId": "bd1480d9-6d1a-4759-9d62-e08f2488d0aa"
+        "outputId": "f55dee9c-c9e7-47f4-9f1f-b060b2d512b4"
       },
       "execution_count": null,
       "outputs": [
@@ -2295,8 +2458,8 @@
           "name": "stdout",
           "text": [
             "      0     1\n",
-            "0  4581   327\n",
-            "1   557  1790\n"
+            "0  4585   323\n",
+            "1   547  1800\n"
           ]
         }
       ]
